--- a/src/components/modules/list/card/card.scss
+++ b/src/components/modules/list/card/card.scss
@@ -14,6 +14,7 @@ img {
 .card {
   @include card;
   cursor: pointer;
+
   position: relative;
   padding-top: 60px;
   margin-bottom: 80px;
@@ -23,6 +24,10 @@ img {
   }
   &:hover {
     animation: bounce 0.3s ease-in-out;
+  }
+
+  &.ghost {
+    animation: vanish 0.3s forwards;
   }
 }
 
@@ -52,5 +57,18 @@ p {
   100% {
     transform: translateY(0);
     box-shadow: 0px 0px 10px 0px #0000003b;
+  }
+}
+
+@keyframes vanish {
+  0% {
+    transform: scale(1);
+  }
+
+  99% {
+    transform: scale(0);
+  }
+  100% {
+    display: none;
   }
 }
