--- a/src/components/modules/list/searchTool/searchTool.scss
+++ b/src/components/modules/list/searchTool/searchTool.scss
@@ -1,3 +1,5 @@
+@import "../../../../config/Mixins.scss";
+
 input {
   box-shadow: 0px 0px 3px 2px rgba(0, 0, 0, 0.231372549);
   border-radius: 4px;
@@ -25,7 +27,7 @@ input {
 }
 
 span {
-  background-color: dodgerblue;
+  background-color: $linkColor;
   color: white;
   font-weight: bold;
   font-size: 21px;
