added header fixed some scss fixed translation layout is now a param of the router so it can have <Link> compo

--- a/src/components/modules/list/card/card.scss
+++ b/src/components/modules/list/card/card.scss
@@ -39,6 +39,7 @@ p {
   text-overflow: ellipsis;
   -webkit-line-clamp: 3;
   line-clamp: 3;
+  text-shadow: 0px 0px 1px #0000001c;
   max-height: 70px;
   &:first-of-type {
     margin-bottom: 10px;
