--- a/src/components/modules/list/searchTool/searchTool.scss
+++ b/src/components/modules/list/searchTool/searchTool.scss
@@ -5,6 +5,7 @@ input {
   border-radius: 4px;
   height: 40px;
   width: 200px;
+  margin-right: 2px;
   padding-left: 10px;
   border: none;
   margin-left: 15px;
