--- a/src/components/modules/list/searchTool/searchTool.scss
+++ b/src/components/modules/list/searchTool/searchTool.scss
@@ -1,5 +1,4 @@
-@import "../../../../config/Mixins.scss";
-
+@import "@Config/Mixins.scss";
 input {
   box-shadow: 0px 0px 3px 2px rgba(0, 0, 0, 0.231372549);
   border-radius: 4px;
