--- a/src/config/layout/layout.scss
+++ b/src/config/layout/layout.scss
@@ -2,12 +2,12 @@
 header {
   width: 80%;
   margin: 0% 10%;
-  margin-bottom: 70px;
+  margin-bottom: 4vw;
   color: dodgerblue;
   padding: 20px 0px 10px 0px;
   font-size: calc(300% - 1.5vw);
   text-shadow: 0px 0px 2px #0000ff69;
-  border-bottom: 2px solid rgb(128 128 128 / 18%);
+  @include separator;
 }
 
 .layout {
@@ -17,14 +17,13 @@ header {
 }
 
 #content {
-  max-width: 80%;
+  width: 80%;
   margin: auto;
   display: grid;
   grid-template-areas:
     ".........."
     "..........";
   grid-template-columns: repeat(10, 10%);
-  grid-template-rows: 50% 50%;
 }
 
 a {
