--- a/src/components/modules/podcast/podcast.scss
+++ b/src/components/modules/podcast/podcast.scss
@@ -98,6 +98,8 @@
     p {
       margin-bottom: 0px;
       padding: 10px 0px;
+      padding-bottom: 0px;
+      margin-bottom: 10px;
     }
 
     a {
