fixed svg style

--- a/src/components/modules/episode/episode.scss
+++ b/src/components/modules/episode/episode.scss
@@ -50,6 +50,10 @@
           fill: white;
         }
       }
+      &:last-of-type svg {
+        margin-left: 20%;
+        margin-top: 20%;
+      }
     }
   }
 }
